refactor: Use JSpecify annotations